# Slides

./: README.md  README.rst  cloudbuild.yaml  pyproject-20220822044600.toml  pyproject.toml
docs/: index.html
docs/doctrees/: bibliography.doctree  environment.pickle  glossary.doctree  index-slides.doctree  index.doctree
docs/doctrees/slides/: index-slides.doctree  index.doctree
docs/html/: .buildinfo  bibliography.html  genindex.html  glossary.html  index-slides.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: index-slides.rst.txt  index.rst.txt
docs/html/_static/: documentation_options.js
docs/html/slides/: index-slides.html  index.html
docs/latex/: slides.aux  slides.fdb_latexmk  slides.fls  slides.idx  slides.ilg  slides.ind  slides.out  slides.tex  slides.toc
docs/revealjs/: .buildinfo  bibliography.html  glossary.html  index-slides.html  index.html  objects.inv
docs/revealjs/_sources/: index-slides.rst.txt
docs/revealjs/_sources/slides/: index-slides.rst.txt
docs/revealjs/_static/: documentation_options.js
docs/revealjs/slides/: index-slides.html  index.html
src/: conf.py  index-slides.rst  index.rst  slides.rst
src/slides/: index-slides.rst  index.rst  slides.py
src/spyce/: helloworld.py  slides.py  slidesv0.py  todo.py
